Bug 1489149 - Check all child lists for children, not just the principal list.  r=dholbert